# scrabgpt_sk

./: .env.example  .gitignore  AGENTS.md  AGENT_CHAT_ANIMATIONS.md  ARCHITECTURE.md  INTEGRATION_GUIDE.md  MCP_TEST_README.md  PRD.md  README.md  check_models.py  inspect_types.py  list_vertex_models.py  pyproject.toml  scrabble_mcp.json  test_chat_ui.py  test_mcp_ui.py  test_propose_move_chat.py  test_statusbar_chat.py  test_ui_integration.py  verify_gemini3_call.py  verify_mcp_agent.py  verify_vertex.py  verify_vertex_call.py
agents/: README.md  full_access.agent  minimal.agent  rule_master.agent  scorer.agent
docs/: AGENT_ARCHITECTURE.md  AGENT_CONFIG_UX_UPDATE.md  AGENT_PATTERN_TUTORIAL.md  AGENT_SETUP_SUMMARY.md  AI_CONFIG_UX_IMPROVEMENTS.md  CHAT_PROTOCOL.md  CHAT_PROTOCOL_IMPLEMENTATION.md  CHAT_PROTOCOL_QUICKSTART.md  DEBUGGING_IMPROVEMENTS.md  ERROR_HANDLING_IMPROVEMENTS.md  GPT_FALLBACK_PARSER.md  JSON_PARSING_IMPROVEMENTS.md  JUDGING_FIXES.md  MCP_INTEGRATION.md  MCP_INTEGRATION_COMPLETE.md  MCP_TEST_UI.md  MODEL_COMPETITION_RESULTS.md  MODEL_RESULTS_UI_FIXES.md  MODEL_SELECTOR_AND_MCP_SUMMARY.md  MODEL_SELECTOR_UI_COMPLETE.md  MODEL_TRACKING_IMPROVEMENTS.md  MULTI_MODEL_AI.md  MULTI_MODEL_UI_IMPROVEMENTS.md  NOVITA_INTEGRATION.md  NOVITA_QUICKSTART.md  PARALLEL_JUDGE_VALIDATION.md  PERSISTENCE_FIX.md  PROMPT_SYSTEM.md  QUICK_START_AGENTS.md  RUN_AND_TEST.md  SESSION_COMPLETE_SUMMARY.md  SESSION_SUMMARY.md  TEAMS_FEATURE.md  TESTING_CHANGES_SUMMARY.md  TEST_PHILOSOPHY.md  TOOLBAR_INTEGRATION_COMPLETE.md  UI_INTEGRATION_SUMMARY.md  WORD_VALIDATION_OPTIMIZATION.md
examples/: README.md  mcp_agent_demo.py
prompts/: README.md  chat_protocol.txt  default.txt
scrabgpt/: __init__.py  __main__.py  config.py  logging_setup.py
scripts/: list_models.py  smoke_test_gemini31.py
tests/: conftest.py  test_agent_config.py  test_agent_player.py  test_agents_dialog_config.py  test_ai_e2e_offline_stub.py  test_ai_judge.py  test_ai_schema_parser.py  test_api_prompt_benchmark.py  test_app_judge_response.py  test_assets.py  test_endgame.py  test_exchange.py  test_internet_tools.py  test_iq.py  test_iq_tests.py  test_juls_lookup.py  test_juls_online_validation.py  test_live_judge_provider.py  test_mcp_server.py  test_mcp_tools.py  test_model_auto_updater.py  test_model_selector_agent.py  test_multi_model.py  test_offline_ai_path_apply.py  test_offline_judge.py  test_offline_judge_ai_blanks.py  test_offline_judge_cross_words.py  test_offline_judge_flag.py  test_offline_judge_gaps.py  test_offline_path.py  test_openai_tools_client.py  test_opening_ai.py  test_opponent_mode_selector.py  test_premiums.py  test_rack.py  test_rules.py  test_save_load.py  test_scoring.py  test_state.py  test_tiles.py  (+5 more)
(+82 files in other folders)
