[tool.poetry]
name = "scrabgpt"
version = "0.1.0"
description = "Play Scrabble against GPT-5-mini with structured OpenAI calls. Cross-platform PySide6 GUI."
authors = ["Michal <you@example.com>"]
readme = "README.md"
packages = [{ include = "scrabgpt" }]
scripts = { scrabgpt = "scrabgpt.__main__:main" }

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
PySide6 = "^6.7.0"
# OpenAI official client (>=1.0)
openai = "^1.35.10"
httpx = ">=0.27.0,<1.0.0"
beautifulsoup4 = "^4.12.3"
parsel = "^1.10.0"
h2 = "^4.3.0"
#lmstudio = "^0.1.1"
google-generativeai = "^0.8.4"
google-genai = "^1.52.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
pytest-asyncio = "^1.2.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "network: tests that perform live network requests (httpx)",
    "openai: tests that call OpenAI API (requires OPENAI_API_KEY)",
    "openrouter: tests that call OpenRouter API (requires OPENROUTER_API_KEY)",
    "internet: tests that require internet access (network or API calls)",
    "stress: stress tests / IQ tests for AI validation",
    "ui: tests that require Qt UI (skipped on CI)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
